# superego

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  Makefile  README.md  default_prompt.md
.ba/: config.json  issues.jsonl
.beads/: issues.jsonl
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
.opencode/skills/superego/: SKILL.md
.opencode/skills/superego/reference/: learning.md  writing.md
.superego/: prompt.md
Formula/: sg.rb  superego.rb
codex-skill/: AGENTS.md.snippet  DECISION.md  README.md  SKILL.md
codex-skill/agents/: code.md
docs/adr/: 001-plugin-distribution.md
hooks/: evaluate.sh  pre-tool-use.sh  session-start.sh  user-prompt-submit.sh
opencode-plugin/: README.md  package.json
opencode-plugin/src/: index.ts
plugin/.claude-plugin/: plugin.json
plugin/agents/: code.md  learning.md  writing.md
plugin/commands/: disable.md  enable.md  init.md  prompt.md  remove.md  status.md
plugin/hooks/: hooks.json
plugin/scripts/: evaluate.sh  pre-tool-use.sh  session-start.sh
scripts/: release.sh
src/: audit.rs  ba.rs  bd.rs  claude.rs  codex_llm.rs  decision.rs  evaluate.rs  feedback.rs  hooks.rs  init.rs  main.rs  migrate.rs  oh.rs  prompts.rs  retro.rs  review.rs  state.rs
src/prompts/: code.md  learning.md
src/transcript/: codex.rs  mod.rs  reader.rs  types.rs
