[package]
name = "superego"
version = "0.3.2"
edition = "2021"
description = "Superego - Metacognitive advisor for Claude Code"
license = "LicenseRef-Proprietary"
repository = "https://github.com/cloud-atlas-ai/superego"
keywords = ["claude", "ai", "cli", "metacognition"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sg"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
regex = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[dev-dependencies]
tempfile = "3.20"
