[package]
name = "superego"
version = "0.9.6"
edition = "2021"
description = "Superego - Metacognitive advisor for Claude Code"
license = "LicenseRef-Proprietary"
repository = "https://github.com/cloud-atlas-ai/superego"
keywords = ["claude", "ai", "cli", "metacognition"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sg"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
attohttpc = { version = "0.30", default-features = false, features = ["json", "tls-rustls-webpki-roots"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
